<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="height_value">%d cm</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular IMC</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>


    <string name="title_peso_bajo">Bajo peso</string>
    <string name="description_peso_bajo">Estás por debajo del peso recomendable para tu altura</string>

    <string name="title_peso_normal">Peso normal</string>
    <string name="description_peso_normal">Estás en el peso recomendable para tu altura</string>

    <string name="title_peso_sobrepeso">Sobrepeso</string>
    <string name="description_peso_sobrepeso">Estás por encima del peso recomendable para tu estatura</string>

    <string name="title_peso_obesidad">Obesidad</string>
    <string name="description_peso_obesidad">Estás muy por encima del peso recomendable para tu estatura</string>

    <string name="error">Error, usted es demasiado obeso</string>


</resources>